2006-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/net/loader/JarURLLoader.java:
	Use Map.Entry instead of LinkedHashMap.Entry
	
2006-05-21  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/naming/Context.java: Documented.

2006-05-21  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/naming/Referenceable.java: Documented.
	* javax/naming/spi/NamingManager.java: Documented.

2006-05-21  Raif S. Naffah  <raif@swiftdsl.com.au>

	* doc/tools.texinfo: Replaced references to MessageBundle.properties
	to messages.properties.
	* resource/gnu/classpath/tools/jarsigner/MessageBundle.properties:
	Renamed to messages.properties.
	* resource/gnu/classpath/tools/keytool/MessageBundle.properties:
	Likewise.
	* resource/gnu/classpath/tools/jarsigner/messages.properties:
	Renamed from MessageBundle.properties.
	Added copyright notice.
	* resource/gnu/classpath/tools/keytool/messages.properties:
	Likewise.
	* tools/gnu/classpath/tools/jarsigner/Messages.java
	(BUNDLE_NAME): Use messages instead of MessageBundle properties file.
	(getFormattedString): Fixed a spelling mistake.
	* tools/gnu/classpath/tools/keytool/Messages.java: Likewise.

2006-05-20  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/font/opentype/NameDecoder.java
	Made class public.
	(getName): Use getShort instead of getChar(), fix PS name.
	(decodeName): New method.
	* gnu/java/awt/peer/gtk/GdkFontPeer.java
	(getSubFamilyName): Implement.
	(getPostScriptName): Use the NameDecoder class instead.
	(parsePSName): Removed.
	(getName): Added

2006-05-20  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/GdkFontPeer.java
	(getTrueTypeTable): New native method.
	(getPostScriptName): Reimplement.
	(parsePSName): New method.
	(getNumGlyphs): Implement.
	* include/gnu_java_awt_peer_gtk_GdkFontPeer.h: New native method.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c
	(Java_gnu_java_awt_peer_gtk_GdkFontPeer_getTrueTypeTable):