@@ -38,7 +38,12 @@ exception statement from your version. */
 
 package javax.naming;
 
- 
+/**
+ * Thrown from the {@link javax.naming.NamingEnumeration}, this exception
+ * indicates that there are more elements than the previously specified
+ * size limit. Hence the enumeration represents only part of the existing
+ * elements that would be an answer to the specified request.
+ */ 
 public class SizeLimitExceededException extends LimitExceededException
 {
   private static final long serialVersionUID = 7129289564879168579L;
