@@ -1,3 +1,12 @@
+2006-05-21  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+	* javax/naming/NameParser.java,
+	javax/naming/NamingEnumeration.java,
+	javax/naming/PartialResultException.java,
+	javax/naming/SizeLimitExceededException.java,
+	javax/naming/spi/ObjectFactory.java,
+	javax/naming/spi/ObjectFactoryBuilder.java: Documented.
+
 2006-05-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/java/net/loader/JarURLLoader.java:
